# personal_website

./: .env  .eslintrc.json  Cargo.toml  config.default.toml  env.sh  index.html  package.json  pnpm-lock.yaml  tsconfig.json
migrations/: 20240330145459_users.up.sql  20240330145503_tokens.up.sql  20240330145505_posts.up.sql
migrations/2024-03-25-183335_users/: up.sql
migrations/posts/: up.sql
migrations/tokens/: up.sql
migrations/users/: up.sql
src/: App.tsx  cli.rs  index.css  logger.rs  main.rs
src/components/: About.tsx  Blog.tsx  Donate.tsx  Header.tsx  Home.tsx  Redirect.tsx  Socials.tsx
src/config/: definition.rs  mod.rs
src/css/: home.css
src/database/: mod.rs
src/database/models/: mod.rs  posts.rs  tokens.rs  users.rs
src/public/: mod.rs  templates.rs
src/public/routes/: mod.rs
src/web/: mod.rs  templates.rs
src/web/routes/: contact.rs  mod.rs  projects.rs  redirect.rs
src/web/routes/api/: mod.rs
src/web/routes/api/webhooks/: github.rs  mod.rs
src/web/routes/api/webhooks/github/: mod.rs  types.rs
src/web/routes/api/webhooks/github/events/: mod.rs
static/css/: global.css  index.css
templates/: contact.html  index.html  panel.html  projects.html
