[package]
name = "personal-website"
version = "0.1.0"
edition = "2021"
authors = [
    "xomf",
    "mcorange <mcorange@mcorangehq.xyz>"
]

[dependencies]
#? base
clap = { version = "4.5.3", features = ["derive"] }
anyhow = "1.0.81"
camino = "1.1.6"
simplelog = { version = "0.12.2", features = ["paris"] }
toml = "0.8.12"
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4.21"

#? web
actix-files = "0.6.5"
actix-web = "4.5.1"
actix-web-lab = "0.20.2"
askama = "0.12.1"

#? database
sqlx = { version = "0.7.4", features = ["tls-rustls", "runtime-tokio", "postgres", "uuid"] }
uuid = { version = "1.8.0", features = ["v4"] }
time = { version = "0.3.34", features = ["macros"] }
crypto = { version = "0.5.1", features = ["digest", "password-hash"] }
bcrypt = "0.15.1"
futures = "0.3.30"

[profile.dev.package.sqlx-macros]
opt-level = 3
